--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <!-- <section id="services" class="services">
       <div class="container">
 
         <div class="section-title" data-aos="fade-in" data-aos-delay="100">
@@ -160,7 +160,8 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section> -->
+    <!-- End Services Section -->
 
     <!-- ======= Counts Section ======= -->
     <section id="counts" class="counts  section-bg">
