--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="hero-container" data-aos="fade-up">
       <h1>Welcome to DEVPUJANAM</h1>
       <h2>         </h2>
-      <a href="#about" class="btn-get-started scrollto"><i class="bx bx-chevrons-down"></i></a>
+      <!-- <a href="#about" class="btn-get-started scrollto"><i class="bx bx-chevrons-down"></i></a> -->
     </div>
   </section><!-- End Hero -->
 
